[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Move Pool.png" type="Texture" id=1]
[ext_resource path="res://assets/grass-kol-1.png" type="Texture" id=2]
[ext_resource path="res://assets/kolam.png" type="Texture" id=3]
[ext_resource path="res://assets/taskbar.png" type="Texture" id=4]
[ext_resource path="res://assets/food.png" type="Texture" id=5]
[ext_resource path="res://assets/shop.png" type="Texture" id=6]
[ext_resource path="res://assets/trash.png" type="Texture" id=7]
[ext_resource path="res://assets/suplement.png" type="Texture" id=8]
[ext_resource path="res://assets/pan.png" type="Texture" id=9]
[ext_resource path="res://assets/coin.png" type="Texture" id=10]
[ext_resource path="res://UI/Pendederan.gd" type="Script" id=11]
[ext_resource path="res://UI/PauseDialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/icons8_delete_127px_1.png" type="Texture" id=13]
[ext_resource path="res://assets/icons8_delete_127px_3.png" type="Texture" id=14]
[ext_resource path="res://UI/ButtonPauseMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/ButtonPauseMenuRed.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/ModalDialog.tscn" type="PackedScene" id=17]

[node name="Pendederan" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pool" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Grass" type="TextureRect" parent="."]
margin_left = 45.7382
margin_top = 83.5482
margin_right = 1329.74
margin_bottom = 731.548
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.9706
margin_top = 48.0833
margin_right = 136.971
margin_bottom = 62.0833
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Kolam Pendederan"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseBtn" type="TextureButton" parent="."]
margin_left = 663.266
margin_top = 12.7279
margin_right = 732.266
margin_bottom = 86.7279
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovePool" type="TextureButton" parent="."]
margin_left = 627.288
margin_top = 432.696
margin_right = 738.288
margin_bottom = 554.696
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="TextureButton" parent="."]
margin_left = 423.305
margin_top = 432.952
margin_right = 534.305
margin_bottom = 550.952
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trash" type="TextureButton" parent="."]
margin_left = 496.03
margin_top = 432.292
margin_right = 569.031
margin_bottom = 553.292
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="TextureButton" parent="."]
margin_left = 253.907
margin_top = 430.442
margin_right = 384.907
margin_bottom = 559.442
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="TextureButton" parent="."]
margin_left = 615.912
margin_top = 16.0488
margin_right = 670.912
margin_bottom = 105.049
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vitamin" type="TextureButton" parent="."]
margin_left = 336.739
margin_top = 431.025
margin_right = 463.739
margin_bottom = 553.025
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 8 )

[node name="Clean" type="TextureButton" parent="."]
margin_left = 185.319
margin_top = 439.126
margin_right = 283.319
margin_bottom = 543.126
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )

[node name="ModalDialog" parent="." instance=ExtResource( 17 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Yes" parent="ModalDialog" instance=ExtResource( 15 )]
margin_left = 227.28
margin_top = 276.561
margin_right = 301.28
margin_bottom = 313.561
text = "Yes"

[node name="No" parent="ModalDialog" instance=ExtResource( 16 )]
margin_left = 405.55
margin_top = 274.879
margin_right = 479.55
margin_bottom = 311.879
text = "No"

[node name="Teks" type="Label" parent="ModalDialog"]
margin_left = 334.677
margin_top = 201.815
margin_right = 374.677
margin_bottom = 215.815
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit ?"

[node name="Pause" parent="." instance=ExtResource( 12 )]
visible = true

[node name="Close" type="TextureButton" parent="Pause"]
margin_left = 593.773
margin_top = 11.591
margin_right = 720.773
margin_bottom = 138.591
rect_scale = Vector2( 0.2, 0.2 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="Pause" instance=ExtResource( 15 )]
margin_left = 615.438
margin_top = 67.762
margin_right = 689.438
margin_bottom = 104.762
text = "Resume"

[node name="Music" parent="Pause" instance=ExtResource( 15 )]
margin_left = 616.382
margin_top = 114.956
margin_right = 690.382
margin_bottom = 151.956
text = "Music"

[node name="Sound" parent="Pause" instance=ExtResource( 15 )]
margin_left = 616.382
margin_top = 163.222
margin_right = 690.382
margin_bottom = 200.222
text = "Sound"

[node name="Quit" parent="Pause" instance=ExtResource( 16 )]
margin_left = 614.092
margin_top = 449.785
margin_right = 688.092
margin_bottom = 486.785
text = "Quit"
[connection signal="pressed" from="PauseBtn" to="." method="_on_PauseBtn_pressed"]
[connection signal="pressed" from="ModalDialog/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="ModalDialog/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="Pause/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Pause/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/Quit" to="." method="_on_Quit_pressed"]
